creazione modulo launchpad vergine

--- a/mta.yaml
+++ b/mta.yaml
@@ -1,36 +1,48 @@
 ID: AUP_SUPPLIER_PORTAL
 _schema-version: '2.1'
 parameters:
-   deploy_mode: html5-repo
+  deploy_mode: html5-repo
 version: 0.0.1
-
 modules:
- - name: AUP_SUPPLIER_PORTAL_appRouter
-   type: approuter.nodejs
-   path: AUP_SUPPLIER_PORTAL_appRouter
-   parameters:
+  - name: AUP_SUPPLIER_PORTAL_appRouter
+    type: approuter.nodejs
+    path: AUP_SUPPLIER_PORTAL_appRouter
+    parameters:
       disk-quota: 256M
       memory: 256M
-   requires:
-    - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
-
-
- - name: AUP_SUPPLIER_PORTAL_ui_deployer
-   type: com.sap.html5.application-content
-   path: AUP_SUPPLIER_PORTAL_ui_deployer
-   requires:
-    - name: AUP_SUPPLIER_PORTAL_html5_repo_host
-
+    requires:
+      - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
+      - name: portal_resources_AUP_SUPPLIER_PORTAL
+  - name: AUP_SUPPLIER_PORTAL_ui_deployer
+    type: com.sap.html5.application-content
+    path: AUP_SUPPLIER_PORTAL_ui_deployer
+    requires:
+      - name: AUP_SUPPLIER_PORTAL_html5_repo_host
+  - name: AUPSUP_LAUNCHPAD
+    type: com.sap.portal.content
+    path: AUPSUP_LAUNCHPAD
+    parameters:
+      stack: cflinuxfs3
+      memory: 128M
+      buildpack: 'https://github.com/cloudfoundry/nodejs-buildpack/releases/download/v1.6.39/nodejs-buildpack-cflinuxfs3-v1.6.39.zip'
+    requires:
+      - name: portal_resources_AUP_SUPPLIER_PORTAL
+      - name: uaa_AUP_SUPPLIER_PORTAL
+      - name: AUP_SUPPLIER_PORTAL_html5_repo_host
+      - name: AUP_SUPPLIER_PORTAL_ui_deployer
 resources:
- - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
-   parameters:
+  - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
+    parameters:
       service-plan: app-runtime
       service: html5-apps-repo
-   type: org.cloudfoundry.managed-service
-
- - name: AUP_SUPPLIER_PORTAL_html5_repo_host
-   parameters:
+    type: org.cloudfoundry.managed-service
+  - name: AUP_SUPPLIER_PORTAL_html5_repo_host
+    parameters:
       service-plan: app-host
       service: html5-apps-repo
-   type: org.cloudfoundry.managed-service
-
+    type: org.cloudfoundry.managed-service
+  - name: portal_resources_AUP_SUPPLIER_PORTAL
+    parameters:
+      service-plan: standard
+      service: portal
+    type: org.cloudfoundry.managed-service
