aggiunta app HTML5 per metasupplier

--- a/mta.yaml
+++ b/mta.yaml
@@ -13,11 +13,18 @@ modules:
     requires:
       - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
       - name: portal_resources_AUP_SUPPLIER_PORTAL
+      - name: uaa_AUP_SUPPLIER_PORTAL
   - name: AUP_SUPPLIER_PORTAL_ui_deployer
     type: com.sap.html5.application-content
     path: AUP_SUPPLIER_PORTAL_ui_deployer
     requires:
       - name: AUP_SUPPLIER_PORTAL_html5_repo_host
+    build-parameters:
+      requires:
+        - name: AUPSUP_HTML5_METASUPPLIER
+          artifacts:
+            - './*'
+          target-path: resources/AUPSUP_HTML5_METASUPPLIER
   - name: AUPSUP_LAUNCHPAD
     type: com.sap.portal.content
     path: AUPSUP_LAUNCHPAD
@@ -30,6 +37,13 @@ modules:
       - name: uaa_AUP_SUPPLIER_PORTAL
       - name: AUP_SUPPLIER_PORTAL_html5_repo_host
       - name: AUP_SUPPLIER_PORTAL_ui_deployer
+  - name: AUPSUP_HTML5_METASUPPLIER
+    type: html5
+    path: AUPSUP_HTML5_METASUPPLIER
+    build-parameters:
+      builder: grunt
+      supported-platforms: []
+      build-result: dist
 resources:
   - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
     parameters:
@@ -45,4 +59,15 @@ resources:
     parameters:
       service-plan: standard
       service: portal
+    type: org.cloudfoundry.managed-service
+  - name: uaa_AUP_SUPPLIER_PORTAL
+    parameters:
+      path: ./xs-security.json
+      service-plan: application
+      service: xsuaa
+    type: org.cloudfoundry.managed-service
+  - name: dest_AUP_SUPPLIER_PORTAL
+    parameters:
+      service-plan: lite
+      service: destination
     type: org.cloudfoundry.managed-service
