--- a/AUPSUP_NODE/package.json
+++ b/AUPSUP_NODE/package.json
@@ -1,20 +1,28 @@
 {
-  "dependencies": {},
-  "description": "my description",
-  "devDependencies": {
-    "jest": "^23.6.0",
-    "jest-junit": "^5.2.0"
-  },
-  "files": [],
-  "main": "server.js",
-  "name": "AUPSUP_NODE",
-  "scripts": {
-    "test": "node node_modules/jest/bin/jest --config jest.json",
-    "test-coverage": "node node_modules/jest/bin/jest --coverage --config jest.json",
-    "start": "node server.js"
-  },
-  "engines": {
-    "node": "8.x"
-  },
-  "version": "1.0.0"
+	"dependencies": {
+		"@sap/xsenv": "latest",
+		"@sap/xssec": "latest",
+		"@sap/hdbext": "latest",
+		"express": "~4.16.0",
+		"passport": "^0.4.0",
+		"stringify-object": "latest",
+		"body-parser": "latest"
+	},
+	"description": "my description",
+	"devDependencies": {
+		"jest": "^23.6.0",
+		"jest-junit": "^5.2.0"
+	},
+	"files": [],
+	"main": "server.js",
+	"name": "AUPSUP_NODE",
+	"scripts": {
+		"test": "node node_modules/jest/bin/jest --config jest.json",
+		"test-coverage": "node node_modules/jest/bin/jest --coverage --config jest.json",
+		"start": "node server.js"
+	},
+	"engines": {
+		"node": "12.x"
+	},
+	"version": "1.0.0"
 }
