--- a/mta.yaml
+++ b/mta.yaml
@@ -15,6 +15,7 @@ modules:
       - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
       - name: portal_resources_AUP_SUPPLIER_PORTAL
       - name: uaa_AUP_SUPPLIER_PORTAL
+      - name: SaasRegistry        
     properties:
       TENANT_HOST_PATTERN: '^(.*)-${space}-aup_supplier_portal_approuter.cfapps.eu10.hana.ondemand.com'         
       
@@ -42,7 +43,7 @@ modules:
       - name: uaa_AUP_SUPPLIER_PORTAL
       - name: AUP_SUPPLIER_PORTAL_html5_repo_host
       - name: AUP_SUPPLIER_PORTAL_ui_deployer
-	  - name: SaasRegistry         
+      - name: SaasRegistry         
     properties:
       TENANT_HOST_PATTERN: '^(.*)-${space}-aup_supplier_portal_approuter.cfapps.eu10.hana.ondemand.com'         
       
@@ -66,7 +67,8 @@ modules:
         disk-quota: 500M
         memory: 256M          
     requires:
-     - {name: uaa_AUP_SUPPLIER_PORTAL}
+     - name: uaa_AUP_SUPPLIER_PORTAL
+     - name: SaasRegistry       
 
 resources:
   - name: AUP_SUPPLIER_PORTAL_html5_repo_runtime
