aggiunta regole routing app router e destinations su app router e modifica ID tabella

--- a/AUP_SUPPLIER_PORTAL_appRouter/xs-app.json
+++ b/AUP_SUPPLIER_PORTAL_appRouter/xs-app.json
@@ -1,5 +1,9 @@
 {
 	"authenticationMethod": "none",
-	"routes": [],
+	"routes": [{
+		"source": "/backend",
+		"target": "/",
+		"destination": "Backend"
+	}],
 	"welcomeFile": "/cp.portal"
 }
