--- a/mta.yaml
+++ b/mta.yaml
@@ -17,7 +17,8 @@ modules:
       - name: uaa_AUP_SUPPLIER_PORTAL
       - name: SaasRegistry        
     properties:
-      TENANT_HOST_PATTERN: '^(.*)-${space}-aup_supplier_portal_approuter.cfapps.eu10.hana.ondemand.com'   
+      SAP_JWT_TRUST_ACL: [{clientid: '*', identityzone: sap-provisioning}]
+      TENANT_HOST_PATTERN: '^(.*)-${space}-aup-supplier-portal-approuter.cfapps.eu10.hana.ondemand.com'   
       SEND_XFRAMEOPTIONS: false
       destinations: '[ { "forwardAuthToken" : true, "name" : "Backend", "url" : "https://${org}-${space}-aupsup-node.cfapps.eu10.hana.ondemand.com" } ]'      
       
@@ -47,7 +48,7 @@ modules:
       - name: AUP_SUPPLIER_PORTAL_ui_deployer
       - name: SaasRegistry         
     properties:
-      TENANT_HOST_PATTERN: '^(.*)-${space}-aup_supplier_portal_approuter.cfapps.eu10.hana.ondemand.com'         
+      TENANT_HOST_PATTERN: '^(.*)-${space}-aup-supplier-portal-approuter.cfapps.eu10.hana.ondemand.com'         
       
   - name: AUPSUP_HTML5_METASUPPLIER
     type: html5
@@ -119,8 +120,8 @@ resources:
         appId: AUP_SUPPLIER_PORTAL!t34981 #preso da env variable del app router per averlo bisogna prima deployare tutto su CF poi si prende l'ID
         #appName: mta-portal-approuter-${org}-${space}
         appUrls:
-          onSubscription: https://${org}-${space}-aup_supplier_portal_approuter.${default-domain}/callback/v1.0/tenants/{tenantId}
-          getDependencies: https://${org}-${space}-aup_supplier_portal_approuter.${default-domain}/callback/v1.0/dependencies
+          onSubscription: https://${org}-${space}-aup-supplier-portal-approuter.${default-domain}/callback/v1.0/tenants/{tenantId}
+          getDependencies: https://${org}-${space}-aup-supplier-portal-approuter.${default-domain}/callback/v1.0/dependencies
         category: ePaas
         description: Supplier Portal
         displayName: Altea Supplier Portal
