--- a/AUPSUP_HTML5_SEARCH_HU/webapp/manifest.json
+++ b/AUPSUP_HTML5_SEARCH_HU/webapp/manifest.json
@@ -12,6 +12,20 @@
 		"sourceTemplate": {
 			"id": "html5moduletemplates.basicSAPUI5ApplicationProjectModule",
 			"version": "1.40.12"
+		},
+		"crossNavigation": {
+			"inbounds": {
+				"intent1": {
+					"signature": {
+						"parameters": {},
+						"additionalParameters": "allowed"
+					},
+					"semanticObject": "SearchHU",
+					"action": "Display",
+					"title": "{{appTitle}}",
+					"icon": "sap-icon://bbyd-active-sales"
+				}
+			}
 		}
 	},
 
