SCHED AGREE creazione e implementazione

--- a/mta.yaml
+++ b/mta.yaml
@@ -49,6 +49,10 @@ modules:
           artifacts:
             - './*'
           target-path: resources/AUPSUP_HTML5_INBOUNDDELIV
+        - name: AUPSUP_HTML5_SCHEDAGREE
+          artifacts:
+            - './*'
+          target-path: resources/AUPSUP_HTML5_SCHEDAGREE
   - name: AUPSUP_LAUNCHPAD
     type: com.sap.portal.content
     path: AUPSUP_LAUNCHPAD
@@ -121,6 +125,13 @@ modules:
   - name: AUPSUP_HTML5_INBOUNDDELIV
     type: html5
     path: AUPSUP_HTML5_INBOUNDDELIV
+    build-parameters:
+      builder: grunt
+      supported-platforms: []
+      build-result: dist
+  - name: AUPSUP_HTML5_SCHEDAGREE
+    type: html5
+    path: AUPSUP_HTML5_SCHEDAGREE
     build-parameters:
       builder: grunt
       supported-platforms: []
