SCHED AGREE implementazione

--- a/AUPSUP_HTML5_SCHEDAGREE/webapp/manifest.json
+++ b/AUPSUP_HTML5_SCHEDAGREE/webapp/manifest.json
@@ -99,7 +99,7 @@
 					"name": "worklist",
 					"greedy": false,
 					"target": [
-						"worklist_pos"
+						"worklist"
 					]
 				},
 				{
@@ -113,7 +113,7 @@
 				}
 			],
 			"targets": {
-				"worklist_pos": {
+				"worklist": {
 					"viewLevel": 1,
 					"viewName": "Worklist"
 				},
