--- a/AUPSUP_NODE/package.json
+++ b/AUPSUP_NODE/package.json
@@ -7,7 +7,8 @@
 		"passport": "^0.4.0",
 		"stringify-object": "latest",
 		"body-parser": "latest",
-		"async": "latest"
+		"async": "latest",
+		"express-timeout-handler":"latest"
 	},
 	"description": "my description",
 	"devDependencies": {
