APRV SCHED AGREE new App

--- a/mta.yaml
+++ b/mta.yaml
@@ -53,6 +53,10 @@ modules:
           artifacts:
             - './*'
           target-path: resources/AUPSUP_HTML5_SCHEDAGREE
+        - name: AUPSUP_HTML5_APR_SCDAGR
+          artifacts:
+            - './*'
+          target-path: resources/AUPSUP_HTML5_APR_SCDAGR
   - name: AUPSUP_LAUNCHPAD
     type: com.sap.portal.content
     path: AUPSUP_LAUNCHPAD
@@ -132,6 +136,13 @@ modules:
   - name: AUPSUP_HTML5_SCHEDAGREE
     type: html5
     path: AUPSUP_HTML5_SCHEDAGREE
+    build-parameters:
+      builder: grunt
+      supported-platforms: []
+      build-result: dist
+  - name: AUPSUP_HTML5_APR_SCDAGR
+    type: html5
+    path: AUPSUP_HTML5_APR_SCDAGR
     build-parameters:
       builder: grunt
       supported-platforms: []
