--- a/mta.yaml
+++ b/mta.yaml
@@ -57,6 +57,10 @@ modules:
           artifacts:
             - './*'
           target-path: resources/AUPSUP_HTML5_APR_SCDAGR
+        - name: AUPSUP_HTML5_METASUPPLIER_M
+          artifacts:
+            - './*'
+          target-path: resources/AUPSUP_HTML5_METASUPPLIER_M
   - name: AUPSUP_LAUNCHPAD
     type: com.sap.portal.content
     path: AUPSUP_LAUNCHPAD
@@ -143,6 +147,13 @@ modules:
   - name: AUPSUP_HTML5_APR_SCDAGR
     type: html5
     path: AUPSUP_HTML5_APR_SCDAGR
+    build-parameters:
+      builder: grunt
+      supported-platforms: []
+      build-result: dist
+  - name: AUPSUP_HTML5_METASUPPLIER_M
+    type: html5
+    path: AUPSUP_HTML5_METASUPPLIER_M
     build-parameters:
       builder: grunt
       supported-platforms: []
