PURCH ORDS: new app

--- a/mta.yaml
+++ b/mta.yaml
@@ -65,6 +65,10 @@ modules:
           artifacts:
             - './*'
           target-path: resources/AUPSUP_HTML5_METASUPPLIER_BM
+        - name: AUPSUP_HTML5_PURCH_ORDS
+          artifacts:
+            - './*'
+          target-path: resources/AUPSUP_HTML5_PURCH_ORDS
   - name: AUPSUP_LAUNCHPAD
     type: com.sap.portal.content
     path: AUPSUP_LAUNCHPAD
@@ -165,6 +169,13 @@ modules:
   - name: AUPSUP_HTML5_METASUPPLIER_BM
     type: html5
     path: AUPSUP_HTML5_METASUPPLIER_BM
+    build-parameters:
+      builder: grunt
+      supported-platforms: []
+      build-result: dist
+  - name: AUPSUP_HTML5_PURCH_ORDS
+    type: html5
+    path: AUPSUP_HTML5_PURCH_ORDS
     build-parameters:
       builder: grunt
       supported-platforms: []
